<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="szk.nutriscan.RegisterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_email"
        android:id="@+id/reg_email"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryBright"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/reg_email_hint"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorHint"
        android:id="@+id/email_text_reg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:id="@+id/reg_pw"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryBright"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:hint="@string/reg_pw"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorHint"
        android:id="@+id/pw_text_reg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_2"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:id="@+id/reg_pw_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryBright"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:hint="@string/reg_pw"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorHint"
        android:id="@+id/pw_text_reg_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@id/pw_text"
        android:layout_margin="280dp"
        android:id="@+id/err_reg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorErr"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:onClick="registerMethod"
        android:layout_marginTop="420dp"
        android:text="@string/reg_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:onClick="backMethod"
        android:layout_marginTop="420dp"
        android:layout_toRightOf="@id/register"
        android:text="@string/reg_cancel_button"
        android:layout_below="@id/logo_name"/>


</RelativeLayout>
