<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="szk.nutriscan.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settings_start_text"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/settings_enter"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_item"
        android:onClick="addItemMethod"
        android:layout_below="@+id/settings_enter"
        android:layout_alignParentRight="true"
        android:text="@string/add_settings"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_settings"
        android:id="@+id/caloric_text"
        android:layout_marginTop="160dp"/>

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_alignParentEnd="true"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/settings_caloric"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_caloric"
        android:id="@+id/settings_set_button"
        android:text="@string/settings_caloric_set"
        android:onClick="caloricSetMethod"
        android:layout_alignParentEnd="true"/>

    <FrameLayout

        class="szk.nutriscan.RecyclerSettingsFragment"
        android:id="@+id/listfrag_settings_nutritions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settings_set_button">

    </FrameLayout>

</RelativeLayout>
